; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-pci-core.c_sdhci_pci_runtime_pm_allow.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_sdhci-pci-core.c_sdhci_pci_runtime_pm_allow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @sdhci_pci_runtime_pm_allow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdhci_pci_runtime_pm_allow(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %3 = load %struct.device*, %struct.device** %2, align 8
  %4 = call i32 @pm_suspend_ignore_children(%struct.device* %3, i32 1)
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call i32 @pm_runtime_set_autosuspend_delay(%struct.device* %5, i32 50)
  %7 = load %struct.device*, %struct.device** %2, align 8
  %8 = call i32 @pm_runtime_use_autosuspend(%struct.device* %7)
  %9 = load %struct.device*, %struct.device** %2, align 8
  %10 = call i32 @pm_runtime_allow(%struct.device* %9)
  %11 = load %struct.device*, %struct.device** %2, align 8
  %12 = call i32 @pm_runtime_put_noidle(%struct.device* %11)
  ret void
}

declare dso_local i32 @pm_suspend_ignore_children(%struct.device*, i32) #1

declare dso_local i32 @pm_runtime_set_autosuspend_delay(%struct.device*, i32) #1

declare dso_local i32 @pm_runtime_use_autosuspend(%struct.device*) #1

declare dso_local i32 @pm_runtime_allow(%struct.device*) #1

declare dso_local i32 @pm_runtime_put_noidle(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
